Build v01 : Personal Update

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -14,11 +14,6 @@ opacity-rule = [
   "80:class_g = 'Eww'"
 ];
 
-#fading = true
-fade-delta = 2;
-#fade-in-step = 0.01;
-#fade-out-step = 0.01;
-
 corner-radius = 10.0;
 rounded-corners-exclude = [
   "class_g = 'Rofi'",
@@ -30,3 +25,12 @@ blur-background-exclude = [
   "class_g != 'Eww'",
   "class_g != 'Caja'"
 ]
+
+
+# Add animation effects
+
+fading = true;
+fade-in-step = 0.085;
+fade-out-step = 0.085;
+fade-delta = 10;
+
