Build v01.01.a : Major Update on Eww

--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -7,31 +7,32 @@
 
 print_info() {
     
-    info " ╭─ Distro: " distro
-    info " ├─ Kernel: " kernel
-	info " ├─ Users:" users
-    info " ├─󰏗 Packages:" packages
-    info " ╰─ Shell:" shell
-    echo
-    info " ╭─ Desktop Environment:" de
-    info " ├─ Terminal:" term
-	info " ├─ Window Manager:" wm
-	info " ├─󰂫 Theme:" theme
-	info " ├─󰂫 Icons:" icons
-	info " ╰─ Font:" font
-    echo
-    info " ╭─󰍛 CPU:" cpu
+    info " ╭─ " distro
+    info " ├─ " kernel
+	info " ├─ " users
+	info " ├─󰄉 " uptime	
+    info " ├─󰏗 " packages
+    info " ╰─ " shell
+#    echo
+#    info " ╭─ Desktop Environment:" de
+#    info " ├─ Terminal:" term
+#	info " ├─ Window Manager:" wm
+#	info " ├─󰂫 Theme:" theme
+#	info " ├─󰂫 Icons:" icons
+#	info " ╰─ Font:" font
+#    echo
+#    info " ╭─󰍛 CPU:" cpu
 #    info " ├─ Model:" model
-    info " ├─󰍹 GPU:" gpu
-	info " ├─ GPU Driver:" gpu_driver
-    info " ├─ Res:" resolution
-    info " ├─ Memory:" memory
-	info " ├─ Disk:" disk
+#    info " ├─󰍹 GPU:" gpu
+#	info " ├─ GPU Driver:" gpu_driver
+#    info " ├─ Res:" resolution
+#    info " ├─ Memory:" memory
+#	info " ├─ Disk:" disk
 #	info " ├─󰁹 ${cl0} " battery 
-    info " ╰─󰄉 Uptime:" uptime
+#    info " ╰─󰄉 Uptime:" uptime
     
 	prin " "
-	prin " \n \n \n \n \n \n  \n \n  \n \n   \n \n   \n \n   \n \n   \n \n   \n \n   \n \n "
+#	prin " \n \n \n \n \n \n  \n \n  \n \n   \n \n   \n \n   \n \n   \n \n   \n \n   \n \n "
     
 }
 
@@ -57,7 +58,7 @@ title_fqdn="on"
 # Example:
 # on:  '4.8.9-1-ARCH'
 # off: 'Linux 4.8.9-1-ARCH'
-kernel_shorthand="off"
+kernel_shorthand="on"
 
 
 ##--------- Distro
@@ -80,7 +81,7 @@ distro_shorthand="off"
 # Example:
 # on:  'Arch Linux x86_64'
 # off: 'Arch Linux'
-os_arch="on"
+os_arch="off"
 
 
 ##--------- Uptime
